sample/asm/invalid_operand_types/idec.asm
.function: main/1
    function 1 main/1
    idec 1

    izero 0
    return
.end
